--- a/Vue/src/assets/icon/iconfont.css
+++ b/Vue/src/assets/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2381523 */
-  src: url('iconfont.woff2?t=1620573298261') format('woff2'),
-       url('iconfont.woff?t=1620573298261') format('woff'),
-       url('iconfont.ttf?t=1620573298261') format('truetype');
+  src: url('iconfont.woff2?t=1639753561018') format('woff2'),
+       url('iconfont.woff?t=1639753561018') format('woff'),
+       url('iconfont.ttf?t=1639753561018') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-mayun:before {
+  content: "\e602";
 }
 
 .icon-biaoqing:before {
