--- a/Admin/src/index.css
+++ b/Admin/src/index.css
@@ -7,3 +7,9 @@ body,
     width: 100%;
     height: 100%;
 }
+
+@layer components {
+    .btn-blue {
+      @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+    }
+  }
